// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'nested items' > text changes 1`] = `
<div>
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        root
      </span>
    </div>
    <div
      class="bulletList_child"
    >
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            foo
          </span>
        </div>
        <div
          class="bulletList_child"
        >
          <div
            class="bulletList_container"
          >
            <div
              class="bulletList_bullet"
            >
              •
            </div>
            <div
              class="bulletList_item"
            >
              <span>
                foofoo
              </span>
            </div>
            <div
              class="bulletList_child"
            />
          </div>
        </div>
      </div>
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            bar
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`'nested items' > text changes 2`] = `
<div>
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        changed root
      </span>
    </div>
    <div
      class="bulletList_child"
    >
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            foo
          </span>
        </div>
        <div
          class="bulletList_child"
        >
          <div
            class="bulletList_container"
          >
            <div
              class="bulletList_bullet"
            >
              •
            </div>
            <div
              class="bulletList_item"
            >
              <span>
                foofoo
              </span>
            </div>
            <div
              class="bulletList_child"
            />
          </div>
        </div>
      </div>
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            bar
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`'nested items' > text changes 3`] = `
<div>
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        changed root
      </span>
    </div>
    <div
      class="bulletList_child"
    >
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            changed foo
          </span>
        </div>
        <div
          class="bulletList_child"
        >
          <div
            class="bulletList_container"
          >
            <div
              class="bulletList_bullet"
            >
              •
            </div>
            <div
              class="bulletList_item"
            >
              <span>
                foofoo
              </span>
            </div>
            <div
              class="bulletList_child"
            />
          </div>
        </div>
      </div>
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            bar
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`'swapped items' > text changes 1`] = `
<div>
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        root
      </span>
    </div>
    <div
      class="bulletList_child"
    >
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            bar
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            foo
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`'swapped items' > text changes 2`] = `
<div>
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        changed root
      </span>
    </div>
    <div
      class="bulletList_child"
    >
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            bar
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            foo
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`'swapped items' > text changes 3`] = `
<div>
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        changed root
      </span>
    </div>
    <div
      class="bulletList_child"
    >
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            bar
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            changed foo
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`add child > baz added 1`] = `
<div>
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        root
      </span>
    </div>
    <div
      class="bulletList_child"
    >
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            foo
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            bar
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            baz
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`add child > initial 1`] = `
<div>
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        root
      </span>
    </div>
    <div
      class="bulletList_child"
    >
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            foo
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            bar
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`inconsistent error > an item is not in linked list > error 1`] = `
<div>
  Error: there is an inconsistency in listItem in the children of '1': some listItems are not in linked list
</div>
`;

exports[`inconsistent error > an item is not in linked list > initial 1`] = `
<div>
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        root
      </span>
    </div>
    <div
      class="bulletList_child"
    >
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            foo
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`inconsistent error > first item not found > error 1`] = `
<div>
  Error: there is an inconsistency in listItem in the children of '1': no listItem with prevId = ''
</div>
`;

exports[`inconsistent error > first item not found > initial 1`] = `
<div>
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        root
      </span>
    </div>
    <div
      class="bulletList_child"
    >
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            foo
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`inconsistent error > next item not found > error 1`] = `
<div>
  Error: there is an inconsistency in listItem in the children of '1': no listItem with id = '3'
</div>
`;

exports[`inconsistent error > next item not found > initial 1`] = `
<div>
  <div
    class="bulletList_container"
  >
    <div
      class="bulletList_bullet"
    >
      •
    </div>
    <div
      class="bulletList_item"
    >
      <span>
        root
      </span>
    </div>
    <div
      class="bulletList_child"
    >
      <div
        class="bulletList_container"
      >
        <div
          class="bulletList_bullet"
        >
          •
        </div>
        <div
          class="bulletList_item"
        >
          <span>
            foo
          </span>
        </div>
        <div
          class="bulletList_child"
        />
      </div>
    </div>
  </div>
</div>
`;
